putting the correct data in the manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,26 @@
 {
 	// Required
 	"manifest_version": 2,
-	"name": "My Extensions",
-	"version": "versionString",
+	"name": "javascripture",
+	"version": "3",
 
 	// Recommended
 	"default_locale": "en",
-	"description": "A plain text description",
+	"description": 'A JavaScript bible exploration app',
 	"icons": {
 		"16": "icon16.png",
 		"48": "icon48.png",
 		"128": "icon128.png"
+	},
+	
+	"app": {
+		"urls": [
+			"*://javascripture.org/",
+			"*://javascripture.org/"
+		],
+		"launch": {
+			"web_url": "http://javascripture.org/"
+		}
 	},
 
 	// Optional
