--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-redux": "^4.0.0",
     "react-waypoint": "^2.0.2",
     "redux": "^3.3.1",
+    "redux-persist": "^3.2.2",
     "redux-thunk": "^2.0.1",
     "sass-loader": "^3.2.0"
   }
