--- a/manifest.json
+++ b/manifest.json
@@ -57,8 +57,8 @@
 
 	"start_url": "/index.html",
 	"display": "standalone",
-	"background_color": "#3E4EB8",
-	"theme_color": "#2F3BA2",
+	"background_color": "#ffffff",
+	"theme_color": "#ffffff",
 
 	// Optional
 	"author": "scruffian",
