--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "production": "NODE_ENV=production node_modules/.bin/webpack -p",
-    "start": "npm install && webpack-dev-server --inline --hot --port 7777",
+    "start": "NODE_ENV=production npm install && webpack-dev-server --inline --hot --port 7777",
     "test": "test"
   },
   "repository": {
@@ -26,7 +26,6 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "lodash": "^4.6.1",
-    "react-addons-perf": "^15.0.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
