--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "production": "NODE_ENV=production node_modules/.bin/webpack -p",
-    "start": "NODE_ENV=production npm install && webpack-dev-server --inline --hot --port 7777",
+    "start": "npm install && webpack-dev-server --inline --hot --port 7777",
     "test": "test"
   },
   "repository": {
@@ -19,38 +19,41 @@
   },
   "homepage": "https://github.com/Automattic/scruffian/Javascripture#readme",
   "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "lodash": "^4.6.1",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "lodash": "^4.17.10",
+    "react-hot-loader": "^4.3.3",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "autoprefixer": "^6.3.6",
-    "classnames": "^2.2.3",
-    "css-loader": "^0.23.1",
+    "autoprefixer": "^8.6.3",
+    "classnames": "^2.2.6",
+    "css-loader": "^0.28.11",
     "debug": "^2.2.0",
-    "inherits": "^2.0.1",
-    "isomorphic-style-loader": "^1.0.0",
-    "json-loader": "^0.5.4",
+    "history": "^4.7.2",
+    "inherits": "^2.0.3",
+    "isomorphic-style-loader": "^4.0.0",
+    "json-loader": "^0.5.7",
     "keyboard-shortcut": "^1.2.0",
-    "mousetrap": "^1.6.0",
-    "node-sass": "^3.7.0",
-    "postcss-loader": "^0.8.2",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.0",
-    "react-waypoint": "^2.0.2",
-    "redux": "^3.3.1",
-    "redux-persist": "^3.2.2",
-    "redux-thunk": "^2.0.1",
-    "sass-loader": "^3.2.0"
+    "mousetrap": "^1.6.2",
+    "node-sass": "4.9.0",
+    "postcss-loader": "^2.1.5",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "connected-react-router": "^4.3.0",
+    "react-waypoint": "^8.0.2",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.0.3"
   }
 }
