--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "production": "NODE_ENV=production node_modules/.bin/webpack -p",
-    "start": "npm install && webpack-dev-server --inline --hot --port 7777",
+    "start": "NODE_ENV=production npm install && webpack-dev-server -p --inline --hot --port 7777",
     "test": "test"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "lodash": "^4.17.10",
     "react-hot-loader": "^4.3.3",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
