--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "react-hot-loader": "^4.3.3",
     "uglifyjs-webpack-plugin": "^1.2.7",
@@ -35,9 +37,11 @@
   "dependencies": {
     "autoprefixer": "^8.6.3",
     "classnames": "^2.2.6",
+    "connected-react-router": "^4.3.0",
     "css-loader": "^0.28.11",
     "debug": "^2.2.0",
     "history": "^4.7.2",
+    "http-server": "^0.11.1",
     "inherits": "^2.0.3",
     "isomorphic-style-loader": "^4.0.0",
     "json-loader": "^0.5.7",
@@ -50,7 +54,6 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "connected-react-router": "^4.3.0",
     "react-waypoint": "^8.0.2",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
