--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.0.3"
+    "sass-loader": "^7.0.3",
+    "strongs": "^1.0.2"
   }
 }
