--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-sidebar": "^3.0.2",
     "react-waypoint": "^8.0.2",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
