--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "css-loader": "^0.28.11",
     "debug": "^2.2.0",
     "history": "^4.7.2",
+    "hoist-non-react-statics": "^3.3.1",
     "http-server": "^0.11.1",
     "inherits": "^2.0.3",
     "isomorphic-style-loader": "^4.0.0",
