--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
     "autoprefixer": "^8.6.3",
     "classnames": "^2.2.6",
     "connected-react-router": "^4.3.0",
