--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "autoprefixer": "^8.6.3",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.6.1",
