--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "^5.1.2",
     "react-sidebar": "^3.0.2",
     "react-waypoint": "^8.0.2",
+    "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
