update packages to latest versions

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "production": "./update-version-number.sh && NODE_ENV=production node_modules/.bin/webpack -p",
-    "start": "npm install && webpack-dev-server --inline --hot --port 7777",
+    "start": "npm install && webpack serve --inline --hot --port 7777",
     "test": "test"
   },
   "repository": {
@@ -19,52 +19,51 @@
   },
   "homepage": "https://github.com/Automattic/scruffian/Javascripture#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^0.1.19",
-    "html-webpack-plugin": "^3.2.0",
-    "lodash": "^4.17.15",
-    "react-hot-loader": "^4.3.3",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "html-webpack-plugin": "^5.3.1",
+    "lodash": "^4.17.21",
+    "react-hot-loader": "^4.13.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.1",
-    "@material-ui/icons": "^4.9.1",
-    "autoprefixer": "^8.6.3",
-    "classnames": "^2.2.6",
-    "connected-react-router": "^6.6.1",
-    "css-loader": "^0.28.11",
-    "debug": "^2.2.0",
-    "history": "^4.7.2",
-    "hoist-non-react-statics": "^3.3.1",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "autoprefixer": "^10.2.5",
+    "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.1",
+    "css-loader": "^5.2.6",
+    "debug": "^4.3.1",
+    "history": "^4.10.1",
+    "hoist-non-react-statics": "^3.3.2",
     "http-server": "^0.12.3",
-    "inherits": "^2.0.3",
-    "isomorphic-style-loader": "^4.0.0",
+    "inherits": "^2.0.4",
+    "isomorphic-style-loader": "^5.1.0",
     "json-loader": "^0.5.7",
     "keyboard-shortcut": "^1.2.0",
-    "mousetrap": "^1.6.2",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^2.1.5",
-    "prop-types": "^15.6.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
+    "mousetrap": "^1.6.5",
+    "node-sass": "^6.0.0",
+    "postcss-loader": "^5.3.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-sidebar": "^3.0.2",
-    "react-waypoint": "^8.0.2",
-    "react-window": "^1.8.5",
-    "redux": "^4.0.5",
+    "react-waypoint": "^10.0.1",
+    "react-window": "^1.8.6",
+    "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^11.1.1",
     "strongs": "^1.0.2",
-    "xhr": "^2.5.0"
+    "style-loader": "^2.0.0",
+    "xhr": "^2.6.0"
   }
 }
